--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
-    <div>
-        <!-- caja de resultado -->
-        <input type="text" id="result" placeholder="0">
-        <br>
+    <div class="calculadora-grilla">
+        <div class="output">
+            <!-- caja de resultado -->
+            <input class="display" type="text" id="result" placeholder="0">
+        </div>
+        
         <!-- botones -->
         <button>1</button>
         <button>2</button>
         <button>3</button>
-        <button>+</button><br>
+        <button>+</button>
         <button>4</button>
         <button>5</button>
         <button>6</button>
-        <button>-</button><br>
+        <button>-</button>
         <button>7</button>
         <button>8</button>
         <button>9</button>
-        <button>/</button><br>
+        <button>/</button>
         <button>C</button>
         <button>0</button>
         <button>=</button>
