capturando funciones para los metodos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Calculadora</h1>
     <div class="calculadora-grilla">
         <div class="output">
             <!-- caja de resultado -->
@@ -30,7 +30,7 @@
         <button name="data-delete">C</button>
         <button name="data-number">0</button>
         <button name="data-igual">=</button>
-        <button name="data-opera">X</button>
+        <button name="data-opera">x</button>
     </div>
 
 
